// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-icon-tooltip-beta #render should render component as expected (1) 1`] = `
<gux-icon-tooltip-beta>
  <template shadowrootmode="open">
    <div class="gux-icon-tooltip">
      <gux-screen-reader-beta>
        <slot name="content">
        </slot>
      </gux-screen-reader-beta>
      <gux-icon size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <div slot="content">
        </div>
      </gux-tooltip-beta>
    </div>
  </template>
</gux-icon-tooltip-beta>
`;

exports[`gux-icon-tooltip-beta #render should render component as expected (2) 1`] = `
<gux-icon-tooltip-beta>
  <template shadowrootmode="open">
    <div class="gux-icon-tooltip">
      <gux-screen-reader-beta>
        <slot name="content">
        </slot>
      </gux-screen-reader-beta>
      <gux-icon size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <div slot="content">
          This is some tooltip text
        </div>
      </gux-tooltip-beta>
    </div>
  </template>
  <span slot="content">
    This is some tooltip text
  </span>
</gux-icon-tooltip-beta>
`;

exports[`gux-icon-tooltip-beta #render should render component as expected (3) 1`] = `
<gux-icon-tooltip-beta icon-name="fa/bell-regular">
  <template shadowrootmode="open">
    <div class="gux-icon-tooltip">
      <gux-screen-reader-beta>
        <slot name="content">
        </slot>
      </gux-screen-reader-beta>
      <gux-icon icon-name="fa/bell-regular" size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <div slot="content">
        </div>
      </gux-tooltip-beta>
    </div>
  </template>
</gux-icon-tooltip-beta>
`;

exports[`gux-icon-tooltip-beta #render should render component as expected (4) 1`] = `
<gux-icon-tooltip-beta icon-name="fa/bell-regular">
  <template shadowrootmode="open">
    <div class="gux-icon-tooltip">
      <gux-screen-reader-beta>
        <slot name="content">
        </slot>
      </gux-screen-reader-beta>
      <gux-icon icon-name="fa/bell-regular" size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <div slot="content">
          This is some tooltip text
        </div>
      </gux-tooltip-beta>
    </div>
  </template>
  <span slot="content">
    This is some tooltip text
  </span>
</gux-icon-tooltip-beta>
`;
